# heat-helper

./: .gitignore  404.html  README.md  index.html  match.py  objects.inv  pyproject.toml
.github/workflows/: docs.yml  publish.yml
changelog/: index.html
cli/: index.html
dates/: index.html
dates-doc/: index.html
docs/: mkdocs.yml
docs/docs/: changelog.md  cli.md  dates-doc.md  dates.md  duplicates-doc.md  duplicates.md  file-processing-doc.md  file-processing.md  getting-help.md  getting-started.md  index.md  installation.md  matching-doc.md  matching.md  names-doc.md  names.md  postcodes-doc.md  postcodes.md  road-map.md  updates-doc.md  updates.md  validation-doc.md  validation.md  year-groups-doc.md  year-groups.md
documentation/: index.html
duplicates/: index.html
duplicates-doc/: index.html
file-processing/: index.html
file-processing-doc/: index.html
getting-help/: index.html
getting-started/: index.html
installation/: index.html
matching/: index.html
matching-doc/: index.html
names/: index.html
names-doc/: index.html
postcodes/: index.html
postcodes-doc/: index.html
road-map/: index.html
search/: search_index.json
src/heat_helper/: __init__.py  (+12 more)
tests/: test_cli.py  test_core.py  test_dates.py  test_duplicates.py  test_matching.py  test_names.py  test_postcode.py  test_updates.py  test_utils.py  test_validation.py  test_yeargroup.py
tutorials/: index.html
updates/: index.html
updates-doc/: index.html
validation/: index.html
validation-doc/: index.html
year-groups/: index.html
year-groups-doc/: index.html
