[project]
name = "heat-helper"
description = "A python library to help users of the Higher Education Access Tracker (HEAT) process their data."
authors = [
    {name = "Hannah Merry"}
]
version = "0.1.3"
license = "GPL-3.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "rapidfuzz>=3.14.3",
]

[project.urls]
Documentation = "https://hammezii.github.io/heat-helper/"
Repository = "https://github.com/hammezii/heat-helper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
